--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
     --sn-stylekit-info-color: #086dd6;
     --sn-stylekit-info-contrast-color: white;
   
-    --sn-stylekit-success-color: #2b9612;
+    --sn-stylekit-success-color: #00ff00;
     --sn-stylekit-success-contrast-color: white;
   
     --sn-stylekit-warning-color: #f6a200;
